# yolov5-tflite-cpp

./: CMakeLists.txt  CMakeLists_old.txt  README.md
media/: out.avi
models/: coco.names  coco_face_box_n-int8.tflite  label_coco_94.txt  yolov5n-int8.tflite
src/: main.cpp  yolov5_tflite.cpp  yolov5_tflite.h
